--- a/pur_beurre_project/pur_beurre/settings.py.example
+++ b/pur_beurre_project/pur_beurre/settings.py.example
@@ -78,9 +78,9 @@ WSGI_APPLICATION = 'pur_beurre.wsgi.application'
 DATABASES = {
     'default': {
         'ENGINE': 'django.db.backends.postgresql', # on utilise l'adaptateur postgresql
-        'NAME': 'pur_beurre', # le nom de notre base de donnees creee precedemment
-        'USER': 'postgres', # attention : remplacez par votre nom d'utilisateur
-        'PASSWORD': 'postgres',
+        'NAME': 'MY DB  AME', # le nom de notre base de donnees creee precedemment
+        'USER': 'MY USER NAME', # attention : remplacez par votre nom d'utilisateur
+        'PASSWORD': 'MY USER PASSWORD',
         'HOST': '',
         'PORT': '5432',
     }
