inmportant change in app structure pur beurre module renamed config

--- a/pur_beurre_project/.coveragerc
+++ b/pur_beurre_project/.coveragerc
@@ -1,6 +1,6 @@
 [run]
 omit = 
-    pur_beurre/*
+    config/*
     authentication/__init__.py
     authentication/admin.py
     authentication/tests/*
