--- a/.coveragerc
+++ b/.coveragerc
@@ -1,6 +1,7 @@
 [run]
 omit = 
-    config/*
+    env/*
+    pur_beurre/*
     authentication/__init__.py
     authentication/admin.py
     authentication/tests/*
@@ -14,3 +15,4 @@ omit =
     credentials.txt
     README.md
     requirements.txt
+    Procfile
